# quantbayes

./: .gitignore  AI_STATS_CIFAR_PLOTS.py  AI_STATS_MNIST_PLOTS.py  MLB1.ipynb  README.md  RKHS.ipynb  amortize_test.py  bochners_theorem.ipynb  boltman.py  custom_spectral_norm.py  dp_erm_assignment.ipynb  efficient_conv.py  fake_data_generator.py  fft_torch.py  fourier_space.ipynb  get_data.py  ili.py  importance_sampling.py  jax_model.py  make_nonconvex_figures2.py  metropolis_hasting.py  monte_carlo.py  naive_bayes_assignment.ipynb  non_stationary.ipynb  norms.py  notes_results.txt  poisson_static_batching_corrected_v4.patch  posterior_samples.py  pyproject.toml  quick.py  reconstruct.ipynb  requirements.txt  setup.py  spectral_conv2.py  spectral_conv_numpyro.py  spectral_pacbayes.py  test.ipynb  test.py  test2.py  test3.py  (+8 more)
BNN/: entropy_mi_analysis.py  generalization_bounds.py  model_calibration.py
GaussianMixtureModel/: mixture_model.py
MCMC_NUTS/: binary.py  multiclass.py  regression.py
MLB1/: README.txt  assignment1.py  assignment3.py
MLB2/: assignment.ipynb
MLB3/: README.txt  data_utils.py  kernels.py  main_q1_svm.py  main_q2_logreg.py  requirements.txt  sgd.py
MLB5/: MLB5.ipynb
MLB6/: LandcoverClassification.ipynb
MLB7/: main.py
architectures/: all_models.py
calibration/: plot_curve.py
calibration_uncertainty/: pac_bayes.py  uncertainty.py
catboost_info/: catboost_training.json
checkpoints/: cnn-e001.eqx  cnn-e002.eqx  cnn-e003.eqx  cnn-e004.eqx  cnn-e005.eqx  cnn-e006.eqx  cnn-e007.eqx  cnn-e008.eqx  cnn-e009.eqx  cnn-e010.eqx
constrained_lagrangian/: lagrangian.py
deep_markov_model/: DMM_SteinVI.py  data_loader.py  helpers.py  main.py  models.py  (+1 more)
(+1244 files in other folders)
